--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="photo-profile">
-                                <img src="images/juan.jpg" alt="Juan Gabriel Condori Jara">
+                                <img src="images/JuanGabrielCondoriJara.png" alt="Juan Gabriel Condori Jara">
                             </div>
-                            <!-- <a href="cv/Ciurlizza_Garfield_Ascencio_Luyo_CV.pdf" target="cv">
+                            <a href="cv/Juan_Gabriel_Condori_Jara_CV.pdf" target="cv">
                                 <div class="download-resume">
                                     <i class="fa fa-cloud-download" aria-hidden="true"></i>
                                     <span class="text-download">DOWNLOAD RESUME</span>
                                 </div>
-                            </a> -->
+                            </a>
                             <div class="available">
                                 <i class="fa fa-check" aria-hidden="true"></i>
                                 <span class="text-available">available on freelance</span>
@@ -149,7 +149,7 @@
                         <div class="col-sm-8">
                             <div class="info-profile">
                                 <h2><span>HOLA, SOY</span> JUAN CONDORI JARA</h2>
-                                <h3>Analista de sistemas</h3>
+                                <h3>Analista de sistemas & Developer Back End Java</h3>
                                 <p>¡Hola! Soy Juan Condori, un desarrollador con más de 2 años de experiencia en las etapas del ciclo del desarrollo de proyectos web dinámicos. Cuento con experiencia en gestión y liderazgo de equipo. Las tecnologías con
                                     con que he estado trabajando recientemente son JavaScript (ES6+), Angular, Spring Boot, PostgreSQL.</p>
                                 <div class="row">
@@ -205,7 +205,7 @@
 														class="fa fa-google" aria-hidden="true"></i></a>
                                             </li>
                                             <li class="li-social-links">
-                                                <a href="#" target="_blank" data-tootik="Twitter" data-tootik-conf="square"><i
+                                                <a href="https://twitter.com/JuanGab06185917" target="_blank" data-tootik="Twitter" data-tootik-conf="square"><i
 														class="fa fa-twitter" aria-hidden="true"></i></a>
                                             </li>
                                             <li class="li-social-links">
